--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,14 +2,14 @@
     <string name="app_name">iseen</string>
     <string name="text_card_setup">卡片设置</string>
     <string name="edit_the_card_info_you_want">在这里编辑欲发送的卡片信息</string>
-    <string name="server_address">服务器地址 (https://example.com/)</string>
+    <string name="server_address">服务器地址</string>
     <string name="title">标题</string>
     <string name="subtitle">子标题</string>
     <string name="hint">外显</string>
-    <string name="card_id">标识(一般不重复)</string>
+    <string name="card_id">探测标识</string>
     <string name="generate_and_signature">生成&amp;签名</string>
     <string name="edit_history">操控&amp;查看历史数据</string>
-    <string name="content_warning">程序仅提供签名(由陌然API提供支持)后的卡片代码，不提供卡片发送服务；如果您需要发送卡片，请自行寻找可信任的模块。由于不受开发者所能控制的因素居多（如QQ的版本更新导致现有卡片被和谐、所需服务的运营商并不稳定，出现大规模网络攻击、风控及不可抗力因素的影响），故不保证长期可用性，切勿用于非法用途并低调使用。一切开发仅供测试与学习！</string>
+    <string name="content_warning">程序仅提供签名后的卡片代码，不提供卡片发送服务；如果您需要发送卡片，请自行寻找可信任的模块。由于不受开发者所能控制的因素居多（如QQ的版本更新导致现有卡片被和谐、所需服务的运营商并不稳定，出现大规模网络攻击、风控及不可抗力因素的影响），故不保证长期可用性，切勿用于非法用途并低调使用。一切开发仅供测试与学习！</string>
     <string name="title_warning">Warning</string>
     <string name="set_random_uuid">设置随机标识</string>
     <string name="save_cfg">记住所有配置</string>
@@ -18,9 +18,9 @@
     <string name="developer">Developer</string>
     <string name="copy_query_url">复制当前查询地址</string>
     <string name="app_subtitle">为你的QQ添加已读检测</string>
-    <string name="php_filename_disguised_as_image">伪装成图片的PHP文件名(index.php)</string>
+    <string name="php_filename_disguised_as_image">探测地址</string>
     <string name="query_data_directory">监听数据存放目录(根目录留空)</string>
-    <string name="dev_description">By bilibili@im-cwuom - UID:473400804\n有事私信联系。\n---------------------\nTelegram Group: @cwuoms_group\nQQ Group: 923071208\n\n程序构建日期: 2024.2.25\n(单击查看详情)</string>
+    <string name="dev_description"><b>Dev: bilibili@im-cwuom</b>\n\nTelegram Group: <b><u>@cwuoms_group</u></b>\nQQ Group: <b><u>923071208</u></b>\n\n程序构建日期: 2024.3.29\n<i>(单击查看详情)</i></string>
     <string name="cards_history">卡片历史</string>
     <string name="manage_cards_history">管理您之前生成过的卡片</string>
     <string name="item_card_title">监听信息</string>
@@ -36,7 +36,7 @@
     <string name="hide_mode_switch">隐匿模式(需服务端支持)</string>
     <string name="switch_hide_edit">隐藏关键输入</string>
     <string name="card_remark">备注(留空则与标识一致)</string>
-    <string name="item_card_content"><![CDATA[(> <.) 我现在什么都不知道，试着\"Get\"一下我也许我就能给你有用的信息了捏!]]></string>
+    <string name="item_card_content">I currently don\'t know anything <![CDATA[(> <.)]]>, Try to **Get** it first !</string>
     <string name="setting">高级设置</string>
     <string name="setup_by_according_to_your_actual">可根据你的实际情况左右程序效果</string>
     <string name="hide_path_setting_hint">隐匿模式路径设置(special/kp/)</string>
@@ -59,4 +59,27 @@
     <string name="push_setup">消息推送设置</string>
     <string name="save_and_apply">保存并应用</string>
     <string name="use_dev_cfg">填充默认服务器设置</string>
+    <string name="home">首页</string>
+    <string name="card_generator">卡片生成器</string>
+    <string name="profile">个人</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="auto_update_uuid">自动更新标识</string>
+
+    <string name="username">\@%s</string>
+    <string name="uid">唯一标识: %s</string>
+    <string name="login">登录</string>
+    <string name="create_time">注册日期: %s</string>
+    <string name="info">个人简介: %s</string>
+    <string name="vip_info">"BiliBili大会员: %s"</string>
+    <string name="permission_info">权限组: %s</string>
+    <string name="following">关注: %s</string>
+    <string name="log_out">注销</string>
+    <string name="placeHolder">软件可能会上传您的登录数据至服务端以便于鉴权和判断账户所有者；但在服务器不会有意记录下您的登录凭证，通常不会对您的账户造成威胁。<b>如果您登录即视为同意此声明</b></string>
+    <string name="profile_warning_title">登录前须知</string>
+    <string name="tips_title">Tips</string>
+    <string name="tips">为避免频繁拉取API，用户信息需手动更新，请下拉刷新您的账户信息。\n如果您不小心登出，您任然可以通过下拉刷新来恢复您的登录状态</string>
+    <string name="birthday">生日: %s</string>
+    <string name="coins">Ark-Coins: %s</string>
+    <string name="custom_image_address">自定义图片地址</string>
 </resources>
