--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,6 +10,7 @@
     <string name="generate_and_signature">生成&amp;签名</string>
     <string name="edit_history">操控&amp;查看历史数据</string>
     <string name="content_warning">程序仅提供签名后的卡片代码，不提供卡片发送服务；如果您需要发送卡片，请自行寻找可信任的模块。由于不受开发者所能控制的因素居多（如QQ的版本更新导致现有卡片被和谐、所需服务的运营商并不稳定，出现大规模网络攻击、风控及不可抗力因素的影响），故不保证长期可用性，切勿用于非法用途并低调使用。一切开发仅供测试与学习！</string>
+    <string name="content_warning_card_gen">程序仅提供签名后的卡片代码，不提供卡片发送服务；使用此功能前，您需要保证您填写的内容具有合规性及合法性。若违反相关规定，相关账号可能会被暂停使用，由于不受开发者所能控制的因素居多，故不保证长期可用性，切勿用于非法用途并低调使用。一切开发仅供测试与学习！</string>
     <string name="title_warning">Warning</string>
     <string name="set_random_uuid">设置随机标识</string>
     <string name="save_cfg">记住所有配置</string>
@@ -20,7 +21,7 @@
     <string name="app_subtitle">为你的QQ添加已读检测</string>
     <string name="php_filename_disguised_as_image">探测地址</string>
     <string name="query_data_directory">监听数据存放目录(根目录留空)</string>
-    <string name="dev_description"><b>Dev: bilibili@im-cwuom</b>\n\nTelegram Group: <b><u>@cwuoms_group</u></b>\nQQ Group: <b><u>923071208</u></b>\n\n程序构建日期: 2024.3.29\n<i>(单击查看详情)</i></string>
+    <string name="dev_description"><b>Dev: bilibili@im-cwuom</b>\n\nTelegram Group: <b><u>@cwuoms_group</u></b>\nQQ Group: <b><u>923071208</u></b>\n\n程序构建日期: 2024.4.4\n<i>(单击查看详情)</i></string>
     <string name="cards_history">卡片历史</string>
     <string name="manage_cards_history">管理您之前生成过的卡片</string>
     <string name="item_card_title">监听信息</string>
@@ -62,7 +63,6 @@
     <string name="home">首页</string>
     <string name="card_generator">卡片生成器</string>
     <string name="profile">个人</string>
-    <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="auto_update_uuid">自动更新标识</string>
 
@@ -82,4 +82,28 @@
     <string name="birthday">生日: %s</string>
     <string name="coins">Ark-Coins: %s</string>
     <string name="custom_image_address">自定义图片地址</string>
+    <string name="custom_ark">Custom-Ark</string>
+    <string name="custom_ark_info">自定义你的Ark卡片</string>
+    <string name="card_type">卡片类型</string>
+    <string name="p_skey">p_skey</string>
+    <string name="skey">skey</string>
+    <string name="uin">uin</string>
+    <string name="card_btn_title">按钮标题</string>
+    <string name="card_btn_jumpurl">按钮跳转链接</string>
+    <string name="jumpurl">跳转链接</string>
+    <string name="thumbnailUrl">缩略图URL</string>
+    <string name="card_tagIcon">标签旁边的小图标的URL</string>
+    <string name="card_tag">标签</string>
+    <string name="card_preview">预览图URL</string>
+    <string name="card_desc">卡片描述</string>
+    <string name="card_cover">预览大图URL</string>
+    <string name="card_prompt">卡片外显</string>
+    <string name="card_title">卡片标题</string>
+    <string name="card_f1">字段1</string>
+    <string name="card_f2">字段2</string>
+    <string name="card_f3">字段3</string>
+    <string name="card_f4">字段4</string>
+    <string name="card_f5">字段5</string>
+    <string name="card_subtitle">卡片副标题</string>
+    <string name="login_qzone">登录QQ空间</string>
 </resources>
